# ipcpp

./: .clang-format  CMakeLists.txt  README.md  test.cpp
ci/: clang-format.sh
include/: dlmalloc.h  murmurhash.hpp  platform.hpp  shalloc.hpp  shmem.hpp
src/: ipcmalloc.c  morecore.cpp  shalloc.cpp
src/posix/: platform.cpp  shmem.cpp
src/win/: platform.cpp
test/: consumer.cpp  producer.cpp  test.cpp
